# multi-tenant-db

./: .env.development  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  DATABASE_SECURITY_TESTING.md  Makefile  README.md  SECURITY_TEST_RESULTS.md  alembic.ini  database_security_tests.sql  main.py  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: database-architect.md  git-operations-manager.md  github-actions-devops.md  project-manager-planner.md  python-backend-architect.md
alembic/: env.py
alembic/versions/: 76f0447e0164_add_missing_rls_functions_for_tenant_.py  8d429f220452_add_missing_rls_policies_for_tenant_.py  d66543feddd6_create_tenant_model_with_rls_support.py
docker/: docker-compose.test.yml  docker-compose.yml
docker/postgres/: pg_hba.conf  postgresql.conf
docker/postgres/init/: 01_create_schema.sql  02_enable_rls.sql  03_sample_data.sql  04_admin_functions.sql
docs/: DATABASE_SETUP.md  FUNCTIONAL_REQUIREMENTS.md  NON_FUNCTIONAL_REQUIREMENTS.md  PROJECT_GOALS.md  PROJECT_PLAN.md  PROJECT_REQUIREMENTS.md  PROJECT_STATUS.md  TEST_STRATEGY.md
scripts/: validate_db_functions.py
src/multi_tenant_db/: README.md  main.py
src/multi_tenant_db/api/middleware/: tenant.py
src/multi_tenant_db/api/v1/: health.py  router.py  tenants.py
src/multi_tenant_db/core/: config.py  deps.py  exceptions.py  logging.py
src/multi_tenant_db/db/: session.py
src/multi_tenant_db/models/: __init__.py  base.py  tenant.py
src/multi_tenant_db/schemas/: __init__.py  tenant.py
src/multi_tenant_db/services/: __init__.py  tenant.py
tests/: conftest.py  factories.py  run_database_security_tests.py  test_config.py
tests/database/: __init__.py  test_migrations.py
tests/integration/: conftest.py  factories.py
tests/integration/test_api/: __init__.py  test_health_integration.py  test_tenants_integration.py
tests/integration/test_database/: __init__.py  test_rls_integration.py  test_session_integration.py
tests/integration/test_scenarios/: __init__.py  test_banking_hierarchy.py  test_fintech_business_rules.py
tests/performance/: __init__.py  test_database_performance.py
tests/security/: __init__.py  conftest.py  test_penetration.py  test_rls_security.py
tests/unit/test_api/: __init__.py  test_health.py  test_tenants.py
tests/unit/test_core/: test_deps.py  test_exceptions.py  test_logging.py
tests/unit/test_db/: __init__.py  test_session.py
tests/unit/test_middleware/: test_tenant.py
tests/unit/test_models/: test_base.py  test_tenant.py
tests/unit/test_schemas/: __init__.py  test_tenant.py
tests/unit/test_services/: test_tenant.py
